--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <!-- Author -->
                 <p id="author" title="Author"></p>
                 <!-- Twitter button -->
-                <a href="#" target="_blank" title="Tweet this quote"><img src="https://seeklogo.com/images/T/twitter-2012-negative-logo-5C6C1F1521-seeklogo.com.png" alt="Twitter logo" id="logo" /></a>
+                <a href="#" target="_blank" title="Tweet this quote"><img src="https://image.ibb.co/gS6EdV/Twitter-logo.png" alt="Twitter logo" id="logo" /></a>
             </div>
         </div>
 
